--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,75 +1,40 @@
 name: Build and push
 
-on: [push]
-
-env:
-  IMAGE: ghcr.io/${{ github.repository }}/dp-debug:${{ github.sha }}
+on: [ push ]
 
 jobs:
   build:
     name: Build and Publish Docker image
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@master
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: docker-build-push
+        uses: nais/docker-build-push@v0
+        id: docker-build-push
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-single-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-single-buildx
-
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache || true
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache || true
-
-      - name: Archive NAIS yaml
-        uses: actions/upload-artifact@v1
-        with:
-          name: nais-yaml
-          path: .nais
+          team: teamdagpenger
+          tag: ${{ github.sha }}
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
+          salsa: true
+    outputs:
+      image: ${{ steps.docker-build-push.outputs.image }}
 
   deploy:
-    name: Matrix deploy 
+    name: Matrix deploy
     needs: [ build ]
     strategy:
       matrix:
-        cluster: [ dev-fss, dev-sbs, dev-gcp, prod-fss, prod-sbs, prod-gcp]
+        cluster: [ dev-fss, dev-sbs, dev-gcp, prod-fss, prod-sbs, prod-gcp ]
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch NAIS yaml
-        uses: actions/download-artifact@v1
-        with:
-          name: nais-yaml
-          path: .nais
+      - uses: actions/checkout@v4
 
-      - uses: nais/deploy/actions/deploy@v1
-        name: Deploy to ${{ matrix.cluster }} 
+      - uses: nais/deploy/actions/deploy@v2
+        name: Deploy to ${{ matrix.cluster }}
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: ${{ matrix.cluster }}
           RESOURCE: .nais/nais.yaml
           PRINT_PAYLOAD: true
-
