--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -8,11 +8,11 @@ metadata:
   annotations:
     nais.io/read-only-file-system: "false"
 spec:
-  image: {{image}}
+  image: "{{image}}"
   replicas:
     min: 1
     max: 1
-  ttl: {{ttl}}
+  ttl: "{{ttl}}"
   prometheus:
     enabled: false
   resources:
