Sett opp logging til både loki og elastic
Legger også til autoInstrumentation hvor det mangler for JVM-apper

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -27,3 +27,11 @@ spec:
         - host: www.vg.no
       rules:
         - application: dp-debug
+  observability:
+    logging:
+      destinations:
+        - id: loki
+        - id: elastic
+    autoInstrumentation:
+      enabled: true
+      runtime: java
